# RGPUtils

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.osx  README.md  RGP-Log.cpp  RGP-Log.h  test.cpp
config/: .gitignore
config/include/rgp/: Config.h
example/: config_example.cpp  example.conf  example.cpp  folder_example.cpp  log_example.cpp
folder/: README.md
folder/example/: example.cpp
folder/include/rgp/: Folder.h
include/: RGP-Log.h
include/rgp/: Config.h  Folder.h  Log.h
log/: CMakeLists.txt
log/include/rgp/: Log.h
source/: RGP-Log.cpp
src/: Config.cpp  Folder.cpp  Log.cpp
test/: test.cpp
